--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chartist-plugin-tooltips-updated": "^0.0.21",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.5.2",
+    "crypto-js": "^4.0.0",
     "d3-dsv": "^1.1.1",
     "d3-format": "^1.3.2",
     "d3-time-format": "^2.1.3",
@@ -75,7 +76,8 @@
     "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0",
     "seamless-immutable": "^7.1.4",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "@ant-design/icons": "latest"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.4",
